traefik-ingress-rotes-http.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard-route
  namespace: traefik
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`xx.xx.xx`)
      kind: Rule
      services:
        - name: traefik
          port: 8080
